--- a/facenet.ipynb
+++ b/facenet.ipynb
@@ -6018,7 +6018,7 @@
     "trainX, trainy = load_dataset('./lfw/')\n",
     "print(trainX.shape, trainy.shape)\n",
     "# load test dataset\n",
-    "testX, testy = load_dataset('./tests/')\n",
+    "testX, testy = load_dataset('./fn_tests/')\n",
     "print(testX.shape, testy.shape)\n",
     "\n",
     "# save and compress the dataset for further use\n",
