added results and tweaked fn demo

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -9,25 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy==1.22.3 in ./env/lib/python3.8/site-packages (from -r requirements.txt (line 1)) (1.22.3)\n",
-      "Requirement already satisfied: opencv-python==4.5.5.64 in ./env/lib/python3.8/site-packages (from -r requirements.txt (line 2)) (4.5.5.64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 -m pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,30 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "samples/Aaron_Eckhart/Aaron_Eckhart_0001.jpg\n",
-      "Saved Aaron_Eckhart's data to /data\n",
-      "samples/Aaron_Pena/Aaron_Pena_0001.jpg\n",
-      "samples/Aaron_Patterson/Aaron_Patterson_0001.jpg\n",
-      "samples/Aaron_Sorkin/Aaron_Sorkin_0002.jpg\n",
-      "samples/Aaron_Sorkin/Aaron_Sorkin_0001.jpg\n",
-      "Saved Aaron_Sorkin's data to /data\n",
-      "samples/Aaron_Peirsol/Aaron_Peirsol_0003.jpg\n",
-      "samples/Aaron_Peirsol/Aaron_Peirsol_0004.jpg\n",
-      "Saved Aaron_Peirsol's data to /data\n",
-      "samples/Aaron_Guiel/Aaron_Guiel_0001.jpg\n",
-      "Saved Aaron_Guiel's data to /data\n",
-      "Detected 75.0%\n",
-      "(6/8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -199,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,26 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded Aaron_Eckhart.npy\n",
-      "Loaded Aaron_Sorkin.npy\n",
-      "Loaded Aaron_Peirsol.npy\n",
-      "Loaded Aaron_Guiel.npy\n",
-      "(6, 16384)\n",
-      "(6, 1)\n",
-      "Model finished training and saved to model.npy.\n",
-      "Shape:\n",
-      "\n",
-      "(6, 16385)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -305,196 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/asor3.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 1 2 ... 3 3 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 1 2 ... 3 3 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 1 2 ... 3 3 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 1 2 ... 3 3 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 1 2 ... 3 3 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 1 2 ... 3 3 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/aeck3.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[ 0 25 26 ...  7  4  0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[ 0 25 26 ...  7  4  0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[ 0 25 26 ...  7  4  0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[ 0 25 26 ...  7  4  0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[ 0 25 26 ...  7  4  0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[ 0 25 26 ...  7  4  0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/aeck1.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 5 4 ... 0 0 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 5 4 ... 0 0 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 5 4 ... 0 0 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 5 4 ... 0 0 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 5 4 ... 0 0 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 5 4 ... 0 0 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/asor1.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 4 6 ... 0 0 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 4 6 ... 0 0 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 4 6 ... 0 0 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 4 6 ... 0 0 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 4 6 ... 0 0 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 4 6 ... 0 0 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/apei3.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/agui2.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[  0   0   0 ... 100  84   0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[  0   0   0 ... 100  84   0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[  0   0   0 ... 100  84   0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[  0   0   0 ... 100  84   0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[  0   0   0 ... 100  84   0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[  0   0   0 ... 100  84   0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/aeck2.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/apei2.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[ 0  1  1 ...  7 10  0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[ 0  1  1 ...  7 10  0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[ 0  1  1 ...  7 10  0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[ 0  1  1 ...  7 10  0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[ 0  1  1 ...  7 10  0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[ 0  1  1 ...  7 10  0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/apei1.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/agui1.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 0 0 ... 1 1 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/asor2.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n",
-      "[0 0 3 ... 0 0 0]\n",
-      "[ 0.  0.  0. ...  9. 15.  0.]\n",
-      "[0 0 3 ... 0 0 0]\n",
-      "[0. 0. 1. ... 2. 1. 0.]\n",
-      "[0 0 3 ... 0 0 0]\n",
-      "[0. 0. 3. ... 0. 0. 0.]\n",
-      "[0 0 3 ... 0 0 0]\n",
-      "[ 0.  0.  0. ... 47. 38.  0.]\n",
-      "[0 0 3 ... 0 0 0]\n",
-      "[ 0. 12. 11. ...  3.  0.  0.]\n",
-      "[0 0 3 ... 0 0 0]\n",
-      "[0. 0. 1. ... 0. 0. 0.]\n",
-      "Image tests/Aaron_Sorkin_0001.jpg is predicted to be: \n",
-      "Aaron_Eckhart\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dir = 'tests'\n",
     "\n",
@@ -534,7 +300,7 @@
    "hash": "9fceb04c73eb57fe7631f74f063f9f6f7fd58a78b78ab48e8e5821942bc17e45"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -549,8 +315,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
